--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,10 @@
 <!doctype html>
 <html lang="en">
+
 <head>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+  <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.deep_orange-teal.min.css" />
+  <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
   <link href=https://fonts.googleapis.com/icon?family=Material+Icons rel="stylesheet">
   <meta charset="utf-8">
   <title>Noter</title>
@@ -9,7 +13,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
+
 <body>
   <app-root></app-root>
 </body>
+
 </html>
